[BUGFIX] fix images not showing up add correct path

--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -48,7 +48,7 @@ article h2 {
     padding-bottom: 5px;
     margin-left: 10%;
     text-align: center;
-    background-image: url(images/icon_group.png);
+    background-image: url("../images/icon_group.png");
     background-repeat: no-repeat;
     background-position: 50% 5px;
     width: 100px;
@@ -57,7 +57,7 @@ article h2 {
     padding-top: 55px;
     padding-bottom: 5px;
     text-align: center;
-    background-image: url(images/icon_bed.png);
+    background-image: url("../images/icon_bed.png");
     background-repeat: no-repeat;
     background-position: 50% 5px;
     width: 100px;
@@ -67,7 +67,7 @@ article h2 {
     padding-bottom: 5px;
     margin-right: 10%;
     text-align: center;
-    background-image: url(images/icon_bath.png);
+    background-image: url("../images/icon_bath.png");
     background-repeat: no-repeat;
     background-position: 50% 5px;
     width: 100px;
@@ -99,18 +99,18 @@ article .amenities li {
     margin-left: -40px;
 }
 .tv {
-    background-image: url(images/icon_tv.png);
+    background-image: url("../images/icon_tv.png");
     background-repeat: no-repeat;
     background-size: 30px 30px;
 
 }
 .pets {
-    background-image: url(images/icon_pets.png);
+    background-image: url("../images/icon_pets.png");
     background-repeat: no-repeat;
     background-size: 30px 30px;
 }
 .wifi {
-    background-image: url(images/icon_wifi.png);
+    background-image: url("../images/icon_wifi.png");
     background-repeat: no-repeat;
     background-size: 30px 30px;
 }
